--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mapbox-gl": "^2.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-map-gl": "^7.0.21",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
