--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "firebase": "^9.16.0",
     "hamburger-react": "^2.5.0",
     "mapbox-gl": "^2.12.0",
     "react": "^18.2.0",
