--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-google-button": "^0.7.2",
     "react-map-gl": "^7.0.21",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
