--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dotenv": "^0.1.3",
     "react-google-button": "^0.7.2",
     "react-map-gl": "^7.0.21",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
