--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
+    "@react-three/fiber": "^8.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,16 +17,20 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@use-gesture/react": "^10.2.24",
+    "deck.gl": "^8.8.23",
     "firebase": "^9.16.0",
     "hamburger-react": "^2.5.0",
     "mapbox-gl": "^2.12.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-google-button": "^0.7.2",
     "react-map-gl": "^7.0.21",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "three": "^0.149.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -54,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@types/mapbox__mapbox-gl-geocoder": "^4.7.3"
+    "@types/mapbox__mapbox-gl-geocoder": "^4.7.3",
+    "@types/three": "^0.149.0"
   }
 }
