--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "deck.gl": "^8.8.23",
     "firebase": "^9.16.0",
     "hamburger-react": "^2.5.0",
-    "mapbox-gl": "^2.12.0",
+    "mapbox": "^1.0.0-beta10",
+    "mapbox-gl": "^2.12.1",
+    "maplibre-gl": "^2.4.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
@@ -32,6 +34,7 @@
     "react-scripts": "5.0.1",
     "three": "^0.149.0",
     "typescript": "^4.9.4",
+    "web-ifc-three": "^0.0.122",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
